@@ -28,7 +28,8 @@
 
   ;; Initialise OpenTelemetry SDK instance and set as default used by `clj-otel`
   (defonce _otel-sdk
-    (autoconfig/init-otel-sdk!))
+    (autoconfig/init-otel-sdk! {:prop-overrides (fn [_]
+                                                  {"otel.service.name" "oblong-app"})}))
 
   ;; Optional - Add JVM metrics in export
   (defonce jvm-reg
