@@ -26,6 +26,7 @@ WARNING: Until version `1.0.0` there is a greater possibility of breaking change
 
 === `0.2.10` (in progress)
 
+- [ADD] New option `prop-overrides` on `steffan-westcott.clj-otel.sdk.autoconfigure/init-otel-sdk!` to override default config values.
 - Bump deps
 * [MAINT] OpenTelemetry `1.54.1`
 
